--- a/pages/store.html
+++ b/pages/store.html
@@ -84,6 +84,11 @@
                             <option value="m">M</option>
                             <option value="l">L</option>
                         </select>
+                        <a
+                            class="sizeChart"
+                            target="_blank"
+                            href="img/store/size-chart.png"
+                        >*</a>
                         <a class="addToCart">Add To Cart</a>
                         <span class="special">*Domestic shipping only</span>
                     `)
